# Fadix

./: .gitignore  Prompt.txt  README.md  index.html  package.json  server.js  setup.bat  setup.sh  tailwind.config.js  vite.config.ts
enhanced-website/: index.html  script.js  style.css
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: architect.rs  backend_specialist.rs  coder.rs  mod.rs  orchestrator.rs  ui_specialist.rs
src-tauri/src/commands/: llm.rs  mod.rs  orchestrator.rs  workspace.rs
src-tauri/src/llm/: mod.rs  provider_local.rs  provider_nvidia.rs  router.rs  types.rs
src-tauri/src/state/: mod.rs  task_state.rs  workspace_state.rs
src-tauri/src/workspace/: atomic_writer.rs  file_reader.rs  mod.rs  tree_scanner.rs
src/components/agents/: AgentMonitor.tsx  AgentStatusCard.tsx  PromptInput.tsx
src/components/layout/: MainContent.tsx  MainPanel.tsx  Sidebar.tsx
src/components/llm/: ProviderToggle.tsx
src/hooks/: useLlmStream.ts  useTauriEvent.ts  useWorkspace.ts
src/lib/: sound.ts  tauri-bridge.ts  types.ts  workspaceEngine.ts
src/stores/: llmStore.ts  workspaceStore.ts
