[package]
name = "fadix"
version = "0.1.0"
edition = "2021"

[lib]
name = "fadix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fadix"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
